2019-07-11  Peter Bloomfield  <pbloomfield@bellsouth.net>

	message: Declare it final

	Use G_DECLARE_FINAL_TYPE to declare LibBalsaMessage, make it
	private, and provide necessary getters and setters.

	* libbalsa/autocrypt.c (autocrypt_from_message):
	* libbalsa/body.c (libbalsa_message_body_set_text_rfc822headers),
	(libbalsa_message_body_get_part_stream),
	(libbalsa_message_body_get_message_part_stream),
	(libbalsa_message_body_get_stream),
	(libbalsa_message_body_get_content),
	(libbalsa_message_body_get_pixbuf),
	(libbalsa_message_body_save_stream):
	* libbalsa/filter.c (libbalsa_condition_matches),
	(libbalsa_condition_can_match):
	* libbalsa/mailbox.c (get_from_field),
	(lbm_index_entry_populate_from_msg),
	(libbalsa_mailbox_real_release_message),
	(libbalsa_mailbox_release_message),
	(libbalsa_mailbox_set_msg_headers),
	(libbalsa_mailbox_get_message_part), (lbm_get_mime_msg),
	(lbm_try_reassemble):
	* libbalsa/mailbox_imap.c (lbimap_update_flags), (imap_flags_cb),
	(imap_expunge_cb), (free_messages_info),
	(libbalsa_mailbox_imap_load_envelope),
	(libbalsa_mailbox_imap_get_message), (get_struct_from_cache),
	(libbalsa_mailbox_imap_fetch_structure),
	(libbalsa_mailbox_imap_fetch_headers), (get_section_for),
	(lbm_imap_get_msg_part_from_cache):
	* libbalsa/mailbox_local.c (lbm_local_get_message_with_msg_info),
	(message_match_real), (libbalsa_mailbox_local_cache_message),
	(libbalsa_mailbox_local_fetch_structure),
	(libbalsa_mailbox_local_fetch_headers),
	(libbalsa_mailbox_local_messages_change_flags):
	* libbalsa/mailbox_maildir.c (libbalsa_mailbox_maildir_check),
	(free_message_info), (libbalsa_mailbox_maildir_sync),
	(libbalsa_mailbox_maildir_fetch_message_structure):
	* libbalsa/mailbox_mbox.c (parse_mailbox), (free_message_info),
	(libbalsa_mailbox_mbox_sync),
	(libbalsa_mailbox_mbox_fetch_message_structure),
	(lbm_mbox_add_message):
	* libbalsa/mailbox_mh.c (lbm_mh_free_message_info),
	(libbalsa_mailbox_mh_check), (libbalsa_mailbox_mh_sync),